updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a bartender looking to make a change in my career. I have always been interested in computers and coding, and am very excited to become a Full Stack Developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from Bel Air, Maryland.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love going to the gym, taking walks with my dog, and video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is something that is both challenging and enjoyable.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Raleigh, North Carolina.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I enjoy the challenge web development offers, besides the job security.</p>
     </section>
 
     <footer id="footer">
