updating our details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>I currently live in Raleigh, North Carolina.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I enjoy the challenge web development offers, besides the job security.</p>
+      <p>I enjoy the challenge web development offers and the opprotunity for growth.</p>
     </section>
 
     <footer id="footer">
